<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment">

    <Button
        android:id="@+id/btnPOn"
        android:layout_width="152dp"
        android:layout_height="56dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="36dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/title_CerrarP"
        android:textColor="#FFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Button
        android:id="@+id/btnPOff"
        android:layout_width="147dp"
        android:layout_height="56dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/title_AbrirP"
        android:textColor="#FFF"
        app:layout_constraintEnd_toStartOf="@+id/btnPOn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/title_Porton"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>